# scripts

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  development.md  pyproject.toml
.github/workflows/: ci.yaml
docs/: mkdocs.yaml
docs/docs/: index.md
scripts/: Bootstrap.ps1  Build-Docs.ps1  Build-Package.ps1  Install-PreCommit.ps1  Install-PreCommitHooks.ps1  New-PythonVenv.ps1  Release-Package.ps1  Release-Project.ps1  Serve-Docs.ps1  Set-VenvOutsideProject.ps1  Update-PreCommitHooks.ps1  Update-Scripts.ps1  Utils.psm1
scripts/utils/: Import-EnvFile.ps1  Install-PreCommit.ps1  New-PythonVenv.ps1
