[project]
name = "scripts"
description = "PowerShell scripts to streamline common tasks in Python projects"
authors = [{ name = "Angelo Peronio" }]
license = "MIT"
keywords = ["Python", "PowerShell"]
dynamic = ["version"]
readme = "README.md"
requires-python = ">= 3.9"

[dependency-groups]
dev = ["bump-my-version", { include-group = "pre-commit" }]
pre-commit = ["pre-commit", "pre-commit-uv"]

[project.urls]
Repository = "https://github.com/angelo-peronio/scripts"
Issues = "https://github.com/angelo-peronio/scripts/issues"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch]
build.targets.sdist.exclude = ["/.**", "development.md"]
# `scripts` has no Python code to be packaged in the wheel.
# We include something nonetheless, otherwise hatchling cries.
build.targets.wheel.only-include = ["README.md"]
version.source = "vcs"

[tool.bumpversion]
tag = true
tag_name = "v{new_version}"
tag_message = "Version v{new_version}"
commit = true
