[project]
name = "scripts"
description = "PowerShell scripts to streamline common tasks in Python projects"
authors = [{ name = "Angelo Peronio" }]
license = "MIT"
keywords = ["Python", "PowerShell", "uv"]
version = "0.1.0"
readme = "README.md"
requires-python = ">= 3.13"

[dependency-groups]
dev = ["bump-my-version", "mkdocs-material", "pre-commit-uv"]

# We do not define the [build-system] table, to tell uv
# that this project has no Python package to be installed.
# https://docs.astral.sh/uv/concepts/projects/config/#build-systems

[project.urls]
Repository = "https://github.com/angelo-peronio/scripts"
Issues = "https://github.com/angelo-peronio/scripts/issues"

[tool.bumpversion]
tag = true
tag_name = "v{new_version}"
tag_message = "Version v{new_version}"
commit = true

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = '''
## Unreleased
'''
replace = '''
## Unreleased

## scripts {new_version} - {utcnow:%Y-%m-%d}

[Download](https://github.com/angelo-peronio/scripts/releases/download/v{new_version}/scripts-v{new_version}.zip)
 · [GitHub release](https://github.com/angelo-peronio/scripts/releases/tag/v{new_version})
 · [source](https://github.com/angelo-peronio/scripts/tree/v{new_version})
'''
